# Thrifty-x

./: .gitignore  Makefile  NOTICE  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: ci.yml
diag/: _synth_card.py  check_card_format.py  check_fft_dualbin.py  check_signal_strength.py  expected_carrier_bin.py  iq_format_diagnosis_report.md  phase_a_code_analysis.md  phase_b_card_analysis.txt  phase_b_synth.txt  phase_c_fft_analysis.txt
docs/: Makefile  rpi5_deployment_report.md  rpi5_deployment_report_ko.md  rpi5_runbook.md  rpi5_runbook_ko.md  rpi5_validation_checklist.md  rpi5_validation_checklist_ko.md  user_guide.md  user_guide_ko.md
docs/design/: multi_template_proposal.md
docs/verification/: auto_classify_recheck.md  auto_classify_robustness.md  c_build_ci_failure.md  comprehensive_refactoring_review.md  gain_mode_state.md  normalization_divisor.md  sub_offset_investigation.md  sub_offset_recheck.md  threshold_path.md  threshold_sweep.md
example/: Makefile  detector.cfg  detector_mini.cfg  detector_r2.cfg
fastcapture/: CMakeLists.txt  README.md  airspy_reader.c  airspy_reader.h  card_reader.c  circbuf.c  circbuf.h  fargs.c  fargs.h  fargs_type.h  fastcard.c  fastcard.h  fastcard.pc.in  fastcard_cli.c  rawconv.c  rawconv.h  reader.c  reader.h
fastcapture/cmake/Modules/: FindVolk.cmake
fastcapture/lib/: base64.c
fastcard/: CMakeLists.txt  cardet.c  circbuf.c  fargs.c  fastcard.c  fft.c  raw_reader.c  rtlsdr_reader.c
fastcard/lib/: base64.h
fastdet/: CMakeLists.txt  fastcard_wrappers.h  fastdet.cpp
fastdet/cmake/Modules/: FindFastcard.cmake
rpi/: cleanup_old_captures.sh  detector.service  heartbeat.py  installation_pi5.md  ntp-after-online.sh  soak_test.sh  thriftyx-capture.cfg.example  update_node.sh
rpi/systemd/: thriftyx-capture@.env.example  thriftyx-capture@.service  thriftyx-heartbeat.env.example  thriftyx-heartbeat.service  thriftyx-heartbeat.timer
scripts/: chip_rate_search.py  fft_analysis.py  hist.py  noise_rms.py  reldist_nearest.py  tdoa_matrix.py
tests/: conftest.py  test_block_data.py  test_carrier_detect.py  test_carrier_sync.py  test_pos_est.py  test_setting_parsers.py  test_settings.py  test_soa_estimator.py  test_util.py
tests/integration/: test_full_pipeline.py
tests/mocks/: mock_device.py  signal_generator.py
tests/unit/: test_airspy_capture.py  test_airspy_gain_mode.py  test_airspy_selection.py  test_airspy_tuning.py  test_block_data.py  test_block_data_range.py  test_capture_output_routing.py  test_capture_safety.py  test_cli.py  test_config_validator.py  test_detect.py  test_detect_analysis_viewer.py  test_gold.py  test_hal_base.py  test_hal_device_factory.py  test_identify.py  test_identify_auto_classify.py  test_matchmaker.py  test_scripts_bit_depth.py  test_signal_utils.py  test_stat_tools.py  test_sub_offset_bounds.py  test_tdoa_est.py  test_tdoa_sample_rate.py
thrifty/: carrier_sync.py
thrifty/experimental/: carrier_interpolators.py
thriftyx/: __init__.py  airspy_capture.py  beacon_analysis.py  block_data.py  carrier_detect.py  carrier_sync.py  cli.py  config_validator.py  detect.py  detect_analysis.py  exceptions.py  fastcard_capture.py  gold.py  identify.py  kitchen_sink.py  matchmaker.py  pos_est.py  scope.py  setting_parsers.py  settings.py  signal_utils.py  soa_estimator.py  stat_tools.py  tdoa_analysis.py  tdoa_est.py  template_extract.py  template_generate.py  toads_analysis.py  toads_data.py  util.py
thriftyx/experimental/: __init__.py  carrier_interpolators.py  detect_carrier_interpol.py  detect_preshift.py  detect_xcorr_interpol.py  xcorr_interpolators.py
thriftyx/hal/: __init__.py  airspy_mini.py  airspy_r2.py  base.py  device_factory.py
