[project]
name = "thriftyx"
version = "0.1.0"
description = "Airspy-based TDOA positioning system for wildlife tracking — fork of Thrifty by SW Krüger"
readme = "README.md"
requires-python = ">= 3.10"
license = {text = "GPL-3.0-only"}
authors = [
    {name = "Schalk Willem Krüger"},
    {name = "Sungjoo Hwang"},
]
dependencies = [
    "numpy>=1.23",
    "scipy>=1.9",
]

[project.optional-dependencies]
fft = ["pyfftw>=0.13"]
analysis = ["matplotlib>=3.6"]
dev = ["pytest>=7.0", "pytest-cov", "mypy", "ruff"]
all = ["thriftyx[fft,analysis,dev]"]

[project.scripts]
thriftyx = "thriftyx.cli:_main"
thrifty = "thriftyx.cli:_main"

[build-system]
requires = ["setuptools>=67"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
include = ["thriftyx*"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
